--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: echo a string
-        run: echo "hello World"
+        run: eccho "hello World"
       - name: multiline script
         run: |
           node -v
