add multiple windows action

--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Directory PowerShell
         run: |
           get-location
-          get-user
+          get-localuser
       - name: Directory Bash
         run: pwd
         shell: bash 
