filtering windows ps output

--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Directory PowerShell
         run: |
           get-location
-          get-localuser
+          get-localuser | ft Name, LastLogin, Enabled
       - name: Directory Bash
         run: pwd
         shell: bash 
