--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -11,7 +11,7 @@ jobs:
           pwd
           ls -a
       - name: Checkout
-        uses: action/checkout@v1
+        uses: actions/checkout@v2.5.0
       - name: List files after checkout
         run: | 
           pwd
