--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -15,7 +15,7 @@ jobs:
           echo $GITHUB_WORKSPACE
           echo "${{ github.token }}"
           # git clone git@github:$GITHUB_REPOSITORY
-          git checkout $GITHUB_SHA
+          # git checkout $GITHUB_SHA
       - name: Checkout
         uses: actions/checkout@v2.5.0
       - name: List files after checkout
